Align fixed priced items

--- a/src/css/flyer.css
+++ b/src/css/flyer.css
@@ -143,24 +143,26 @@ main:last-child {
   font-size: 8pt;
 }
 .flyerList .row {
-  display: grid;
+  display: flex;
   height: calc((297mm - 150px) / var(--grid-rows));
+  justify-content: space-evenly;
   align-items: flex-end;
   padding-bottom: 40px;
-  grid-template-columns: repeat(var(--grid-cols), calc(100% / var(--grid-cols)));
 }
 .flyerList .row div {
+  width: calc(100% / var(--grid-cols));
   display: grid;
   grid-column-gap: 5px;
   align-items: flex-end;
   grid-template-columns: 40% calc(50% - 5px);
 }
 .flyerList .row div div {
+  width: 100%;
   display: block;
 }
 .flyerList .fixed {
   position: relative;
-  padding: 20px 10px 50px;
+  padding: 20px 10px 40px;
   border: var(--fx-bd-weight) var(--fx-bd-style) var(--fx-bd-color);
   color: var(--fx-ft-color);
   background-color: var(--fx-bg-color);
