--- a/src/sass/flyer/grid.scss
+++ b/src/sass/flyer/grid.scss
@@ -4,50 +4,28 @@
     font-size:  8pt;
 
     .row {
-        display:        grid;
+        display:        flex;
         height:         calc((297mm - 150px) / var(--grid-rows));
+        justify-content:space-evenly;
         align-items:    flex-end;
         padding-bottom: 40px;
-        grid-template-columns: repeat(var(--grid-cols), calc(100% / var(--grid-cols)));
+        // grid-template-columns: repeat(var(--grid-cols), calc(100% / var(--grid-cols)));
 
         div {
+            width: calc(100% / var(--grid-cols));
             display:         grid;
             grid-column-gap: 5px;
             align-items:     flex-end;
             grid-template-columns: 40% calc(50% - 5px);
     
             div {
+                width:   100%;
                 display: block;
             }
         }
     }
     
-    .fixed {
-        position:   relative;
-        padding:    20px 10px 50px;
-        border:     var(--fx-bd-weight) var(--fx-bd-style) var(--fx-bd-color);
-        color:      var(--fx-ft-color);
-        background-color: var(--fx-bg-color);
-
-        &::before {
-            content: 'Preços Fixos';
-            position:   absolute;
-            top:        calc(var(--fx-title-height) / -2);
-            left:       calc(50% - (var(--fx-title-width) - 20px) / 2);
-            padding:    5px 10px;
-            text-align: center;
-            border:     var(--fx-title-bd-weight) var(--fx-title-bd-style) var(--fx-title-bd-color);
-            color:      var(--fx-title-ft-color);
-            font-size:  var(--fx-title-ft-size);
-            font-family:var(--fx-title-ft-family);
-            background-color: var(--fx-title-bg-color);
-        }
-
-        .price {
-            color: var(--fx-price-color);
-            background-image: var(--fx-price-img);
-        }
-    }
+    @import 'fixed';
 
     img {
         max-width:  100%;
@@ -62,7 +40,7 @@
 
         &.obs {
             font-weight: normal;
-            font-size: .8em;
+            font-size:   0.8em;
         }
     }
     
